--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Simple Calculator</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="cal.css"/>
 </head>
 <body>
   <div class="calculator">
@@ -32,6 +32,6 @@
       <button class="btn" onclick="appendValue('.')">.</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="capture.js"></script>
 </body>
 </html>
